"solved-collapsing-navbar-issue-with-flex-wrap"

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@ body {
     font-family: 'Shadows Into Light', cursive;
     padding:1%;
     font-size: 24pt; 
-    border-radius: 15px;
+    
 
 }
 
